--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,9 @@
         "next/core-web-vitals",
         "eslint:recommended",
         "plugin:jsx-a11y/recommended",
+        "plugin:import/recommended",
+        "plugin:@typescript-eslint/recommended",
         "prettier"
-    ]
+    ],
+    "parser": "@typescript-eslint/parser"
 }
