--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"encoding": "^0.1.13",
 		"eslint": "^8",
 		"eslint-config-next": "^13.5.2",
+		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-jsx-a11y": "^6.8.0",
 		"postcss": "^8",
